--- a/template/package.json
+++ b/template/package.json
@@ -25,8 +25,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"{{#router}},
-    "vue-router": "^3.0.1"{{/router}}
+    "vue": "^2.5.2",
+    "axios": "^0.18.0",
+    "css-loader": "^0.28.11",
+    "fastclick": "^1.0.6",
+    "lib-flexible": "^0.3.2",
+    "mint-ui": "^2.2.13",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
+    "vue-style-loader": "^3.1.2"
   },
   "devDependencies": {
     {{#lint}}
