--- a/template/package.json
+++ b/template/package.json
@@ -24,7 +24,12 @@
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-style-loader": "^3.1.2"
+    "vue-style-loader": "^3.1.2",
+    "sass-loader": "^7.0.2",
+    "webpack-zip-plugin": "^0.1.6",
+    "html-webpack-plugin": "^2.30.1",
+    "node-notifier": "^5.1.2",
+    "node-sass": "^4.9.0"
   },
   "devDependencies": {
     {{#if_eq runner "jest"}}
@@ -88,13 +93,7 @@
     "portfinder": "^1.0.13",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0",
-
-    "sass-loader": "^7.0.2",
-    "webpack-zip-plugin": "^0.1.6",
-    "html-webpack-plugin": "^2.30.1",
-    "node-notifier": "^5.1.2",
-    "node-sass": "^4.9.0",
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
