--- a/template/package.json
+++ b/template/package.json
@@ -121,7 +121,8 @@
     "portfinder": "^1.0.13",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "postcss-px2rem-exclude": "0.0.6"
   },
   "engines": {
     "node": ">= 6.0.0",
